--- a/.github/workflows/run_poster_generate.yml
+++ b/.github/workflows/run_poster_generate.yml
@@ -131,7 +131,7 @@ jobs:
 
       - name: Mv svg files to examples
         # only for me to show
-        if: github.repository_owner == 'Daydog'
+        if: github.repository_owner == 'yihong0618'
         run: mv OUT_FOLDER/*.svg examples/ && mv OUT_FOLDER/*.stl examples/
 
       - name: Push new svg posters
